--- a/src/Components/Main/Box/Box.css
+++ b/src/Components/Main/Box/Box.css
@@ -1,11 +1,40 @@
-.boxes {
+.section_box
+{
+  font-family: "Poppins", sans-serif;
+  font-size: 1.3rem;
+  color: #0c2340;
+  width: 90%; 
+  margin: 0 auto;
+  text-align: center;
+}
+
+.section_box > h2
+{
+  display: inline-block;
+  transform: translateY(1.5rem);
+  background-color: #f6f6f7;
+  padding: 0 0.6rem;
+}
+
+.section_box > hr
+{
+  width: 70%;
+  background-color: #0c2340;
+  margin: 0 auto;
+  z-index: -1;
+}
+
+.boxes 
+{
   width: 90%;
   height: auto;
-  background-color: rgb(255, 255, 255);
+  background-color: #f6f6f7;
   display: flex;
   padding-right: 5%;
   padding-left: 5%;
+  margin: 1.4rem auto;
 }
+
 @media (max-width: 700px) {
   .boxes {
     flex-direction: column;
