--- a/src/Components/Main/Box/Card.css
+++ b/src/Components/Main/Box/Card.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 /* Desktop*/
-.img {
+.img 
+{
   width: 100%;
   height: auto;
 }
