--- a/src/Components/Gallery/Gallery.css
+++ b/src/Components/Gallery/Gallery.css
@@ -21,15 +21,7 @@
     height: 100%;
 }
 
-.btn
+.btn-align
 {
-   
-    padding: 15px 30px;
-    border: none;
-    background-color: #0c2340;
-    color: white;
-    display: block;
     margin: -1rem auto 2rem auto;
-    cursor: pointer;
-    font-size: 1rem;
 }
