--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -8,6 +8,16 @@
     background-color: var(--bg-main);
 }
 
+.nav_head
+{
+    margin: 4%;
+}
+
+.nav_head img 
+{
+    width: 70%;
+}
+
 /* Section 1 */
 .navbar_prime
 {
@@ -68,6 +78,10 @@
     color: var(--white);
 }
 
+.ham_container
+{
+    display: none;
+}
 
 /* Section 2 */
 .navbar_menu-main
@@ -80,6 +94,7 @@
     float: right;
     align-self: center;
     z-index: 100;
+    box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.123);
 }
 
 .navbar_menu-main a
@@ -149,8 +164,20 @@
 {
     .section_navbar
     {
-        padding: 0 3rem;
+        padding: 0 1rem;
     }
+    .navbar_prime
+    {
+        height: 4.5rem !important;
+    }
+
+    .navbar_title
+    {
+        font-size: 1.04rem; 
+        padding: 0;
+    }
+
+    /* Hamburger Button */
 
     .navbar_menu-main
     {
@@ -158,20 +185,59 @@
         width: 100%;
     }
 
+    .ham_container
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0.7rem 0;
+        border: 1px solid white;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    .ham_container:hover
+    {
+        transform: scale(1.02);
+    }
+
+    .ham_container:active
+    {
+        transform: scale(0.98);
+    }
+
+    .ham
+    {
+        display: inline-block;
+        background-color: var(--white);
+        width: 2.6rem;
+        height: 2px;
+        position: relative;
+        margin:0 0.4rem;
+    }
+
+    .ham::before,
+    .ham::after
+    {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 2.6rem;
+        height: 2px;
+        background-color: var(--white);
+    }
+
+    .ham::before{top: -0.8rem;}
+    .ham::after{top: 0.8rem;}
+
 }
 
 @media screen and (max-width: 810px)
 {
     .section_navbar
     {
-        padding: 0 3rem;
+        padding: 0 2rem;
         height: 12rem;
-    }
-
-    .navbar_title
-    {
-        font-size: 1.04rem; 
-        padding: 1.7rem 0;
     }
 
     .navbar_menu-main
@@ -184,6 +250,27 @@
         display: none;
     }
 
+}
+
+@media screen and (max-width: 500px)
+{
+    .section_navbar
+    {
+        height: 4.5rem; 
+    }
+
+    .nav_head img 
+    {
+        width: 60%;
+        margin-top: -0.1rem; 
+    }
+
+    .navbar-image
+    {
+        width: 58px;
+        height: 58px;
+        margin-top: -0.6rem;
+    }
 }
 
 
