--- a/src/Components/Main/About/About.css
+++ b/src/Components/Main/About/About.css
@@ -2,8 +2,13 @@
 
 .section_about
 {
+    width: 100%;
+    height: 30rem;
+}
+.about_main
+{
     width: 90%;
-    height: 29rem;
+    height: inherit;
     margin: 2rem auto;
     display: flex;
     justify-content: space-between; 
@@ -12,6 +17,7 @@
     url("../../../Assets/main/img_about.JPG");
     background-size: cover;
     padding-left: 1.2rem;
+    font-size: 0.98rem;
 }
 
 .about_head 
@@ -48,4 +54,11 @@
 .about_text > p:not(:last-child)
 {
     margin-bottom: 0.56rem;
+}
+
+.about-btn
+{
+    margin: 0 auto;
+    transform: translateY(-5rem);
+    padding: 0.7rem 1.3rem !important;
 }
