--- a/src/Components/Main/Carousel/Carousel_L.css
+++ b/src/Components/Main/Carousel/Carousel_L.css
@@ -10,12 +10,7 @@
   width: 100%;
   color: rgb(233, 233, 233);
   background: rgb(0, 0, 0);
-  background: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.7) 50%,
-    rgba(0, 0, 0, 1) 100%
-  );
+  background: linear-gradient(180deg,rgba(0, 0, 0, 0) 0%,rgba(0, 0, 0, 0.7) 50%,rgba(0, 0, 0, 1) 100%);
 }
 .writing:hover {
   color: rgb(255, 255, 255);
@@ -23,12 +18,33 @@
 .imgsize 
 {
   width: 100%;
-  max-height: calc(100vh - 11.72rem);
-  min-height: 30rem;
+  height: calc(100vh - 11.72rem);
+  min-height: 33rem;
+  max-height: 45rem;
 }
 .cente {
   display: flex;
   align-items: center;
 }
-@media (max-width: 768px) {
+
+@media screen and (max-width: 640px)
+{
+  .imgsize 
+  {
+    height: calc(100vh - 8.72rem);
+    max-height: 38rem;
+    min-height: 28rem;
+  }
+  
+}
+
+@media screen and (max-width: 520px)
+{
+  .imgsize 
+  {
+    height: calc(100vh - 7.62rem);
+    min-height: 20rem;
+    max-height: 35rem;
+  }
+  
 }
