--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -37,20 +37,9 @@
 .navbar_title
 {
     display: flex;
-    font-size: 1.17rem; 
     padding: 2.5rem 0 1.5rem 0;
     align-items: center;
     pointer-events: none;
-}
-
-.navbar_title h2
-{
-    letter-spacing: 0.04rem;
-}
-
-.navbar_title h1
-{
-    text-transform: uppercase;
 }
 
 .navbar_menu-sec
@@ -105,7 +94,7 @@
 
 .navbar_menu-main a
 {
-    color: var(--ash);
+    color: var(--bg-main);
 }
 
 .navbar_menu-main ul,
@@ -217,9 +206,10 @@
         flex-direction: column;
         justify-content: center;
         margin: 0.7rem 0;
-        border: 1px solid white;
+        border: 1px solid var(--white);
         border-radius: 4px;
         cursor: pointer;
+        transition: transform 0.2s ease-in-out;
     }
 
     .ham_container:hover
@@ -352,7 +342,6 @@
         height: 46px;
         margin-top: -0.5rem;
     }
-
 }
 
 
