--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -6,6 +6,12 @@
     width: 100%;
     padding: 0 4.5rem;
     background-color: var(--bg-main);
+    z-index: 100;
+}
+
+.lock
+{
+    position: fixed;
 }
 
 .nav_head
@@ -145,6 +151,19 @@
     right: 50%;  
 }
 
+.navbar_menu-side
+{
+    display: none;
+    width: 0;
+    transition: all 2s linear;
+}
+
+.nav_side-items
+{
+    display: none;
+}
+
+
 @media screen and (max-width: 1280px)
 {
     .navbar_menu-main
@@ -205,11 +224,11 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        cursor: pointer;
         margin: 0.7rem 0;
+        transition: transform 0.2s ease-in-out;
         border: 1px solid var(--white);
         border-radius: 4px;
-        cursor: pointer;
-        transition: transform 0.2s ease-in-out;
     }
 
     .ham_container:hover
@@ -246,6 +265,64 @@
     .ham::before{top: -0.8rem;}
     .ham::after{top: 0.8rem;}
 
+    .cross
+    {
+        display: inline-block;
+        background-color: var(--white);
+        width: 2.6rem;
+        height: 0;
+        position: relative;
+        margin:0 0.4rem;
+
+    }
+
+    .cross::before,
+    .cross::after
+    {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 2.6rem;
+        height: 2px;
+        background-color: var(--white);
+    }
+
+    .cross::before{top: -0.1rem; transform-origin: 50%, 50%; transform: rotate(45deg);}
+    .cross::after{top: -0.1rem; transform-origin: -50%, -50%; transform: rotate(-45deg);}
+
+    .navbar_menu-side
+    {
+        position: fixed;
+        bottom: 0%;
+        right: 0;
+        width: 40%;
+        max-width: 350px;
+        height: calc(100% - 8.6rem);
+        background-color: var(--bg-main);
+        border-top: 1px solid black;
+        z-index: 10000;
+    }
+
+    .nav_side-items
+    {
+        display: block;
+        text-align: center;
+    }
+
+    .nav_side-items li
+    {
+        display: block;
+        font-size: 1.5rem;
+        color: var(--white);
+        padding: 1rem 2rem;
+    }
+
+    .nav_side-items li:hover
+    {
+        color: var(--bg-main);
+        background-color: var(--white);
+    }
+
 }
 
 @media screen and (max-width: 780px)
@@ -265,6 +342,12 @@
         padding: 0.8rem 2rem;
     }
 
+    .navbar_menu-side
+    {
+        height: calc(100% - 5.6rem);
+    }
+   
+
     .nav_head img 
     {
         width: 60%;
@@ -278,16 +361,20 @@
         margin-top: -0.6rem;
     }
 
-    .ham_container
+    .ham_container,
+    .cross_container
     {
         margin: 0.85rem 0;
     }
 
-    .ham
+    .ham,
+    .cross
     {
         width: 2.2rem;
     }
 
+    .ham::before,
+    .ham::after,
     .ham::before,
     .ham::after
     {
@@ -297,14 +384,34 @@
     .ham::before{top: -0.7rem;}
     .ham::after{top: 0.7rem;}
 
+    .cross::before{top: -0.1rem; left: -0.2rem; transform-origin: 50%, 50%; transform: rotate(45deg);}
+    .cross::after{top: -0.1rem; left: -0.2rem; transform-origin: -50%, -50%; transform: rotate(-45deg);}
+ 
+    .nav_side-items
+    {
+        display: block;
+    }
 }
 
 @media screen and (max-width: 520px)
 {
     .section_navbar
     {
+       
         height: 4.5rem; 
         padding: 0 1.8rem;
+    }
+
+    .navbar_menu-side
+    {
+        width: 60%;
+        height: calc(100% - 4.5rem);
+    }
+
+    .nav_side-items li
+    {
+        font-size: 1.2rem;
+        padding: 0.8rem 1.6rem;
     }
 
     .ham_container
@@ -318,13 +425,18 @@
     }
 
     .ham::before,
-    .ham::after
+    .ham::after,
+    .cross::before,
+    .cross::after
     {
         width: 2rem;
     }
 
     .ham::before{top: -0.6rem;}
     .ham::after{top: 0.6rem;}
+
+    .cross::before{left: 0.1rem;}
+    .cross::after{left: 0.1rem;}
 
     .nav_head
     {
