--- a/src/Components/People/Faculty/Faculty.css
+++ b/src/Components/People/Faculty/Faculty.css
@@ -6,6 +6,7 @@
     font-family: "Montserrat";
     line-height: 1.4;
     
+
 }
 
 .section_faculty h1
@@ -15,19 +16,33 @@
 
 .faculty_grid
 {
-    width: 80%;
+    width: 83%;
     display: grid;
-    grid-template-rows: repeat(6, 15.4rem);
-    grid-template-columns: repeat(2, minmax(30rem, 1fr));
+    grid-template-rows: repeat(6, 15.8rem);
+    grid-template-columns: repeat(2, 1fr);
     grid-row-gap: 35px;
     grid-column-gap: 50px;
     margin: 2rem auto 0 auto;
+    
 }
 
-.faculty_grid h4,
+.faculty_grid h3
+{
+    margin-bottom: 0.2rem;
+}
+
+.faculty_grid h3,
 .faculty_grid p
 {
     font-family: sans-serif;
+    color: var(--bg-main);
+    
+}
+
+.faculty_grid p
+{
+    font-size: 0.98rem;
+    
 }
 
 .faculty_card 
@@ -35,11 +50,12 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-rows: 164px 1fr;
-    grid-template-columns: 140px 1fr;
+    grid-template-rows: 150px 1fr;
+    grid-template-columns: 130px 1fr;
     position: relative;
     z-index: 10;
-    
+    padding: 0.8rem 1rem 0.8rem 1.2rem;
+    word-break: break-word; 
 }
 
 .faculty_card::before
@@ -49,19 +65,131 @@
     height: 100%;
     box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.123);
     background-color: white;
-    transform: skewX(-3deg) translate(-2%, -3%);
+    /* transform: skewX(-3deg) translate(-2%, -3%); */
     position:absolute;
     z-index: -1;
 }
 
 .faculty_card > img
 {
-    width: 130px;
-    height: 160px;
+    width: 113.75px;
+    height: 140px;
 }
 
 #last-div
 {
     grid-column-start: 1;
     grid-column-end: 3;
+}
+
+.btn-oval
+{
+    display: block;
+    position: absolute;
+    right: 2%;
+    bottom: 3%;
+    border-radius: 200px;
+    border: 1px solid #333;
+    background-color: transparent;
+    padding: 0.3rem 0.7rem;
+    cursor: pointer;
+    transition: transform 0.1s ease-in-out;
+}
+
+.btn-oval:hover,
+.btn-oval:active
+{
+    color: var(--white);
+    background-color: var(--bg-main);
+    
+}
+
+.btn-oval:active
+{
+    transform: scale(0.97);
+}
+
+@media screen and (max-width: 1320px)
+{
+
+    .faculty_grid
+    {
+        width: 88%;
+        grid-column-gap: 43px;
+    }
+
+    .faculty_card 
+    {
+        grid-template-rows: 145px 1fr;
+        grid-template-columns: 125px 1fr;
+    }
+
+    .faculty_grid p
+    {
+        font-size: 0.96rem;
+    }
+
+    .faculty_card > img
+    {
+        width: 109.68px;
+        height: 135px;
+    }
+
+}
+
+@media screen and (max-width: 1150px)
+{
+
+    .faculty_grid
+    {
+        width: 92%;
+        grid-template-rows: repeat(6, 16rem);
+        grid-column-gap: 40px;
+    }
+
+    .faculty_card 
+    {
+        grid-template-rows: 134px 1fr;
+        grid-template-columns: 118px 1fr;
+    }
+
+    .faculty_grid p
+    {
+        font-size: 0.95rem;
+    }
+
+    .faculty_card > img
+    {
+        width: 103.95px;
+        height: 126px;
+    }
+
+}
+
+@media screen and (max-width: 980px)
+{
+    .faculty_grid
+    {
+        width: 60%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(11, 16rem);
+        grid-column-gap: 40px;
+    }
+
+    .faculty_card 
+    {
+        grid-template-rows: 134px 1fr;
+        grid-template-columns: 118px 1fr;
+    }
+
+    .faculty_grid p
+    {
+        font-size: 0.95rem;
+    }
+
+    .faculty_card > img
+    {
+        width: 103.95px;
+        height: 126px;
+    }
 }
