--- a/src/Components/Main/About/About.css
+++ b/src/Components/Main/About/About.css
@@ -1,10 +1,18 @@
+/* Importing Font 'Poppins' from google fonts*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 
 .section_about
 {
-    width: 100%;
     height: 30rem;
 }
+
+.section_about h2
+{
+    font-size: 1.7rem;
+    color: var(--bg-main);
+}
+
 .about_main
 {
     width: 90%;
@@ -17,13 +25,13 @@
     url("../../../Assets/main/img_about.JPG");
     background-size: cover;
     padding-left: 1.2rem;
-    font-size: 0.98rem;
+   
 }
 
 .about_head 
 {
     display: inline-block;
-    padding: 0.8rem 1.2rem;
+    padding: 0.5rem 1.1rem 0.6rem 1.1rem;
     position: relative;
 }
 
@@ -31,23 +39,18 @@
 .about_head::before
 {
     content: "";
-    width: 80%;
+    width: 70%;
     height: 0.3rem;
     position: absolute;
-    bottom: 0%;
-    left: 0%;
+    bottom: 10%;
+    left: 5%;
     background-color: powderblue;
-}
-
-.section_about h2
-{
-    color: #0c2340;
 }
 
 .about_text
 {
     width: 74%;
-    height: 27rem;
+    height: inherit;
     line-height: 1.7;
 }
 
@@ -56,9 +59,99 @@
     margin-bottom: 0.56rem;
 }
 
-.about-btn
+@media screen and (max-width: 1260px)
 {
-    margin: 0 auto;
-    transform: translateY(-5rem);
-    padding: 0.7rem 1.3rem !important;
+    .section_about
+    {
+        height: 31.4rem;
+    }
+
+    .section_about h2
+    {
+        font-size: 1.5rem;
+    }
+
+    .about_main
+    {
+        font-size: 0.95rem;
+    }
+
+    .about_text
+    {
+        line-height: 1.6;
+    }
+}
+
+@media screen and (max-width: 1130px)
+{
+    .section_about
+    {
+        height: 31.6rem;
+    }
+
+    .section_about h2
+    {
+        font-size: 1.4rem;
+    }
+
+    .about_main
+    {
+        font-size: 0.90rem;
+    }
+
+    .about_text
+    {
+        line-height: 1.6;
+    }
+}
+
+@media screen and (max-width: 980px)
+{
+    .section_about
+    {
+        height: 33.6rem;
+    }
+
+    .about_main
+    {
+        font-size: 0.90rem;
+    }
+
+    .about_text
+    {
+        line-height: 1.5;
+    }
+}
+
+@media screen and (max-width: 860px)
+{
+    .section_about
+    {
+        height: 33.6rem;
+    }
+
+    .about_main
+    {
+        font-size: 0.90rem;
+    }
+
+    .about_text
+    {
+        line-height: 1.5;
+    }
+}
+
+@media screen and (max-width: 520px)
+{
+    .about_main
+    {
+        background-image: none;
+    }
+
+    .about_text
+    {
+        width: 100%;
+        line-height: 1.4;
+        text-align: justify;
+    }
 }
