--- a/src/Components/Main/Contact/Contact.css
+++ b/src/Components/Main/Contact/Contact.css
@@ -34,3 +34,70 @@
     left: 0%;
     background-color: powderblue;
 }
+
+@media screen and (max-width: 1260px)
+{
+    .section_contact
+    {
+        width: 19.3rem;
+        height: 21rem;
+    }
+
+    .contact_head ~ div
+    {
+        margin-top: 1.9rem;
+        padding: 0 1.5rem;
+    }
+}
+
+@media screen and (max-width: 1130px)
+{
+    .section_contact
+    {
+        width: 18.8rem;
+    }
+
+    .contact_head ~ div
+    {
+        margin-top: 1.8rem;
+        padding: 0 1.3rem;
+    }
+}
+
+@media screen and (max-width: 980px)
+{
+    .section_contact
+    {
+        width: 17.5rem;
+        height: 20rem;
+    }
+
+    .contact_head ~ div
+    {
+        margin-top: 1.5rem;
+        padding: 0 1rem;
+    }
+}
+
+@media screen and (max-width: 860px)
+{
+    .section_contact
+    {
+        width: 17.5rem;
+        height: 20rem;
+    }
+
+    .contact_head ~ div
+    {
+        margin-top: 1.5rem;
+        padding: 0 1rem;
+    }
+}
+
+@media screen and (max-width: 520px)
+{
+    .section_contact
+    {
+        display: none;
+    }
+}
