--- a/src/Components/Main/Program/Program.css
+++ b/src/Components/Main/Program/Program.css
@@ -33,14 +33,15 @@
     display: flex;
 }
 
+
 .program_list > li
 {
     font-family: "Poppins";
-    font-size: 1.2em;
+    font-size: 1.2rem;
     font-weight: 800;
     text-transform: uppercase;
     box-shadow: inset 0 -1px 0 #ccc;
-    padding:0 20px; 
+    padding:0 20px 0 20px; 
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -49,6 +50,7 @@
     height: 7rem;
     align-content: center;
     margin-bottom: 0;
+    margin-right: 10rem;
     cursor: pointer;
 }
 
@@ -64,7 +66,7 @@
 
 .program_image
 {
-    width: 64%;
+    width: 100%;
     height: 28rem;
     background-color: white;
 }
@@ -73,4 +75,105 @@
 {
     width: 100%;
     height: 100%;
+}
+
+@media screen and (max-width: 1090px)
+{
+    .program_box
+    {
+        height: 26rem;
+    }
+    .program_list > li
+    {
+        font-size: 1.1rem;
+        height: 6.5rem;
+        margin-right: 8.7rem;
+    }
+
+    .program_image
+    {
+        height: 26rem;
+    }
+
+}
+
+@media screen and (max-width: 980px)
+{
+    .program_box
+    {
+        height: 22rem;
+    }
+
+    .program_list > li
+    {
+        font-size: 1rem;
+        height: 5.5rem;
+        margin-right: 7.7rem;
+    }
+
+    .program_image
+    {
+        height: 22rem;
+    }
+}
+
+@media screen and (max-width: 890px)
+{
+    .program_box
+    {
+        height: 20rem;
+    }
+
+    .program_list > li
+    {
+        font-size: 0.96rem;
+        height: 5rem;
+        margin-right: 6.5rem;
+    }
+
+    .program_image
+    {
+        height: 20rem;
+    }
+}
+
+@media screen and (max-width: 790px)
+{
+    .program_box
+    {
+        flex-direction: column-reverse;
+        height: 40rem;
+    }
+
+    .program_list > li
+    {
+        font-size: 1.2rem;
+        height: 5rem;
+        margin-right: 0rem;
+        text-align: center;
+    }
+
+}
+
+@media screen and (max-width: 790px)
+{
+    .program_box
+    {
+        flex-direction: column-reverse;
+        height: 34rem;
+    }
+
+    .program_list > li
+    {
+        font-size: 1rem;
+        height: 4.5rem;
+        margin-right: 0rem;
+        text-align: center;
+    }
+
+    .program_image
+    {
+        height: 16rem;
+    }
+
 }
