--- a/src/Components/People/Faculty/Faculty.css
+++ b/src/Components/People/Faculty/Faculty.css
@@ -5,8 +5,39 @@
     background-color: #f7f7f7;
     font-family: "Montserrat";
     line-height: 1.4;
-    
+}
 
+.faculty_bg
+{
+    width: 100%;
+    height: 30rem;
+    background-image: linear-gradient(to right, rgba(3,29,58, 0.3) 0%, rgba(3,29,58, 0.5) 100%),
+    url("../../../Assets/main/img_about.jpg");
+    background-size: cover;
+    position: relative;
+}
+
+.faculty_bg > h1
+{
+    font-size: 6rem;
+    font-weight: 900;
+    color: var(--white);
+    font-family: "Roberto", sans-serif;
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.123);  
+}
+
+.faculty_bg > h1::before
+{
+    content: "";
+    width: 80%;
+    height: 0.3rem;
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    background-color: var(--white);
 }
 
 .section_faculty h1
