--- a/src/Components/Gallery/Gallery_main.css
+++ b/src/Components/Gallery/Gallery_main.css
@@ -5,8 +5,8 @@
     margin: 3rem auto;
     display: grid;
     grid-gap: 6.65%;
-    grid-template-rows: repeat(2, 270px);
-    grid-template-columns: repeat(4, 20%);
+    grid-template-rows: repeat(2, 300px);
+    grid-template-columns: repeat(4, 280px);
     backface-visibility: hidden;
 }
 
