--- a/src/Components/People/Profile/Profile.css
+++ b/src/Components/People/Profile/Profile.css
@@ -127,3 +127,27 @@
     padding: 2px 0;
 }
 
+.profile_section-1
+{
+    width: 90%;
+    margin: 2rem auto;
+    display: grid;
+    grid-template-columns: 30rem 1fr;
+    grid-template-rows: repeat(2, 6rem);
+    grid-column-gap: 3rem;
+    font-family: "Roberto", sans-serif;
+}
+
+.child_sec-1
+{
+    padding: 1rem 2rem;
+    text-align: center;
+    background-color: #bcc4cf;
+    grid-column: 1 / 2;
+    grid-row: 1 / 4;
+}
+
+.prof_container
+{
+    display: flex;
+}
