--- a/src/Components/Facilities/Facilities.css
+++ b/src/Components/Facilities/Facilities.css
@@ -1,8 +1,8 @@
+/* Main */
 .section_facilities
 {
     width: 90%;
-    padding-top: 3rem;
-    margin: 2rem auto;
+    margin: 7.5rem auto 2rem auto;
 }
 
 .facilities_box
@@ -12,34 +12,57 @@
     margin-bottom: 7rem;
 }
 
-.facilities_box > img
+.article_img
 {
-    width: 56%;
-    height: 26rem;
+    width: 54%;
+    height: calc(100% - 2rem);
     margin-top: 2rem;
+} 
+
+.article_img > img
+{
+    width: 100%;
+    height: 100%;
 }
 
-.facilities_para-1
+.fac_common
 {
-    width: 44%;
-    height: 22rem;
+    width: 46%;
+    height: calc(100% - 6rem);
     color: #0c2340;
     font-family: "Poppins", sans-serif;
-    padding: 4rem 3rem; 
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.facilities_para-1::before
+.fac_common > h2
+{
+    width: 90%;
+    padding-left: 2rem;
+}
+
+.fac_common::before
 {
     content: "";
-    width: 54.5rem;
-    height: 23rem;
+    width: 135%;/*54.5rem; */
+    height: 110%;
     position: absolute;
-    transform: translate(-20rem, -4rem);
     background-color: #edf2f9;
     outline: 2px  #bcc4cf solid;
     outline-offset: 10px;
     z-index: -1;
+}
+
+.facilities_para-1::before
+{
+    transform: translate(-26%, 0); /*4rem */
+}
+
+.facilities_para-2::before
+{
+    transform: translate(0, 0);
 }
 
 .change
@@ -47,25 +70,31 @@
     flex-direction: row-reverse;  
 }
 
-.facilities_para-2
+
+@media screen and (max-width: 1370px)
 {
-    width: 44%;
-    height: 22rem;
-    color: #0c2340;
-    font-family: "Poppins", sans-serif;
-    padding: 4rem 3rem; 
-    position: relative;
+    .facilities_box
+    { 
+        height: 26rem; 
+    }
+
+    .fac_common
+    {
+        font-size: 0.95rem;
+    }
+
 }
 
-.facilities_para-2::before
+@media screen and (max-width: 1180px)
 {
-    content: "";
-    width: 54.5rem;
-    height: 23rem;
-    position: absolute;
-    transform: translate(-3rem, -4rem);
-    background-color: #edf2f9;
-    outline: 2px  #bcc4cf solid;
-    outline-offset: 10px;
-    z-index: -1;
+    .facilities_box
+    { 
+        height: 24rem; 
+    }
+
+    .fac_common
+    {
+        font-size: 0.86rem;
+    }
+
 }
