--- a/src/Components/Main/About/About.css
+++ b/src/Components/Main/About/About.css
@@ -31,8 +31,10 @@
 .about_head 
 {
     display: inline-block;
-    padding: 0.5rem 1.1rem 0.6rem 1.1rem;
+    
+    padding: 0.5rem 1.1rem 0.6rem 0;
     position: relative;
+    margin-bottom: 0.6rem;
 }
 
 
@@ -40,10 +42,10 @@
 {
     content: "";
     width: 70%;
-    height: 0.3rem;
+    height: 0.2rem;
     position: absolute;
     bottom: 10%;
-    left: 5%;
+    left: 0%;
     background-color: powderblue;
 }
 
@@ -87,11 +89,6 @@
     .section_about
     {
         height: 31.6rem;
-    }
-
-    .section_about h2
-    {
-        font-size: 1.4rem;
     }
 
     .about_main
@@ -146,6 +143,8 @@
     .about_main
     {
         background-image: none;
+        padding-left: 0;
+        margin: 2rem auto 0.6rem auto;
     }
 
     .about_text
@@ -157,6 +156,6 @@
 
     .section_about
     {
-        height: 39.6rem;
+        height: 100%;
     }
 }
