--- a/src/Components/Main/Banner/Ban.css
+++ b/src/Components/Main/Banner/Ban.css
@@ -1,19 +1,43 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-.bgi {
+.bgi 
+{
   background-image: url("../../../Assets/main/bg_banner.jpg");
   background-size: cover;
   font-family: "Poppins", sans-serif;
   font-size: 1.4rem;
-}
-.cvr {
   margin: 0%;
-  color: white;
-  padding-top: 5%;
-  padding-bottom: 5%;
-  padding-right: 10%;
-  padding-left: 10%;
+  color: var(--white);
+  padding: 5% 10%;
+
 }
-.cgreen {
+
+.cgreen 
+{
   font-size: 2.8rem;
-  color: rgb(255, 255, 255);
+  color: var(--white);
+}
+
+.banner_child
+{
+  text-align: justify;
+  
+}
+
+@media screen and (max-width: 520px)
+{
+  .bgi 
+  {
+    font-size: 1rem;
+    padding: 5% 7%;
+  }
+
+  .banner_child
+  {
+    line-height: 1.6;
+  }
+
+  .cgreen 
+  {
+    font-size: 1.8rem;
+  }
 }
