Updated profiles section

--- a/src/Components/Gallery/Gallery_main.css
+++ b/src/Components/Gallery/Gallery_main.css
@@ -22,7 +22,7 @@
 
 .gallery-main_bg > h1
 {
-    font-size: 6rem;
+    /* font-size: 6rem; */
     font-weight: 900;
     color: var(--white);
     font-family: "Roberto", sans-serif;
