--- a/src/Components/Main/Box/Card.css
+++ b/src/Components/Main/Box/Card.css
@@ -9,7 +9,7 @@
 .h41 {
   padding-left: 4%;
   padding-inline-start: 4%;
-  font-size: 150%;
+  /* font-size: 150%; */
   font-family: "Poppins", sans-serif;
   color: rgb(3, 29, 58);
 }
@@ -35,7 +35,7 @@
   padding: 5%;
   margin-bottom: 10px;
   font-family: "Poppins", sans-serif;
-  font-size: 85%;
+  /* font-size: 85%; */
 }
 
 /* Tablet*/
@@ -46,10 +46,10 @@
     background-color: rgb(255, 255, 255);
   }
   .p1 {
-    font-size: 75%;
+    /*font-size: 75%; */
   }
   .h41 {
-    font-size: 110%;
+    /* font-size: 110%; */
   }
 }
 @media (max-width: 700px) {
