--- a/src/Components/Facilities/Facilities.css
+++ b/src/Components/Facilities/Facilities.css
@@ -2,14 +2,14 @@
 .section_facilities
 {
     width: 90%;
-    margin: 7.5rem auto 2rem auto;
+    margin: 7rem auto;
 }
 
 .facilities_box
 {
     display: flex;  
     height: 28rem; 
-    margin-bottom: 7rem;
+
 }
 
 .article_img
@@ -80,7 +80,7 @@
 
     .fac_common
     {
-        font-size: 0.95rem;
+        /* font-size: 0.95rem; */
     }
 
 }
@@ -94,7 +94,7 @@
 
     .fac_common
     {
-        font-size: 0.86rem;
+        /* font-size: 0.86rem; */
     }
 
 }
