--- a/src/Components/Main/Box/Box.css
+++ b/src/Components/Main/Box/Box.css
@@ -1,7 +1,7 @@
 .section_box
 {
   font-family: "Poppins", sans-serif;
-  font-size: 1.3rem;
+  /* font-size: 1.3rem; */
   color: #0c2340;
   width: 90%; 
   margin: 0 auto;
