--- a/src/Components/Main/Program/Program.css
+++ b/src/Components/Main/Program/Program.css
@@ -37,7 +37,7 @@
 .program_list > li
 {
     font-family: "Poppins";
-    font-size: 1.2rem;
+    /*font-size: 1.2rem;*/
     font-weight: 800;
     text-transform: uppercase;
     box-shadow: inset 0 -1px 0 #ccc;
@@ -61,7 +61,7 @@
     justify-content: center;
     position: relative;
     width: 100%;
-    font-size: 1.1em;
+    /*font-size: 1.1em;*/
 }
 
 .program_image
@@ -85,7 +85,7 @@
     }
     .program_list > li
     {
-        font-size: 1.1rem;
+        /*font-size: 1.1rem;*/
         height: 6.5rem;
         margin-right: 8.7rem;
     }
@@ -106,7 +106,7 @@
 
     .program_list > li
     {
-        font-size: 1rem;
+        /*font-size: 1rem;*/
         height: 5.5rem;
         margin-right: 7.7rem;
     }
@@ -126,7 +126,7 @@
 
     .program_list > li
     {
-        font-size: 0.96rem;
+        /*font-size: 0.96rem;*/
         height: 5rem;
         margin-right: 6.5rem;
     }
@@ -147,7 +147,7 @@
 
     .program_list > li
     {
-        font-size: 1.2rem;
+        /*font-size: 1.2rem;*/
         height: 5rem;
         margin-right: 0rem;
         text-align: center;
@@ -165,7 +165,7 @@
 
     .program_list > li
     {
-        font-size: 1rem;
+        /*font-size: 1rem;*/
         height: 4.5rem;
         margin-right: 0rem;
         text-align: center;
