--- a/src/Components/Reusable/Error/Error.css
+++ b/src/Components/Reusable/Error/Error.css
@@ -33,7 +33,7 @@
 
 .error_prime > h1
 {
-    font-size: 13rem;
+    /*font-size: 13rem;*/
     color: transparent;
     text-align: center;
 }
@@ -46,13 +46,13 @@
 .error_txt > h2
 {
     font-family: "Roboto", sans-serif;
-    font-size: 2rem;
+    /*font-size: 2rem;*/
     font-weight: 800;
 }
 
 .error_txt > p
 {
-    font-size: 1.3rem;
+    /*font-size: 1.3rem;*/
     color: var(--bg-grey);
     font-family: "Poppins", sans-serif;
 
