--- a/src/Components/Main/Carousel/Carousel_L.css
+++ b/src/Components/Main/Carousel/Carousel_L.css
@@ -32,7 +32,7 @@
 {
   .writing
   {
-    /*font-size: 0.85rem;*/
+    font-size: 0.85rem;
   }
   .imgsize 
   {
@@ -47,7 +47,7 @@
 {
   .writing
   {
-    /*font-size: 0.75rem;*/
+    font-size: 0.75rem;
   }
 
   .imgsize 
