--- a/src/Components/Reusable/Card/Card.css
+++ b/src/Components/Reusable/Card/Card.css
@@ -10,7 +10,7 @@
 
 .div_card > h4
 {
-    /*font-size: 1.4em;*/
+    font-size: 1.4em;
     font-weight: 600;
     position: absolute;
     top: 50%;
