--- a/src/App.css
+++ b/src/App.css
@@ -60,11 +60,12 @@ li
     color: var(--white);
 }
 
-@media screen and (max-width: 1380px)
+@media screen and (max-width: 540px)
 {
-    html
+    .btn
     {
-        font-size: 97%;
+        padding: 12px 24px;
     }
+
 }
 
