--- a/src/Components/Main/Banner/Ban.css
+++ b/src/Components/Main/Banner/Ban.css
@@ -4,7 +4,7 @@
   background-image: url("../../../Assets/main/bg_banner.jpg");
   background-size: cover;
   font-family: "Poppins", sans-serif;
-  /* font-size: 1.4rem; */
+  font-size: 1.4rem; 
   margin: 0%;
   color: var(--white);
   padding: 5% 10%;
@@ -13,7 +13,7 @@
 
 .cgreen 
 {
-  /* font-size: 2.8rem;*/
+  font-size: 2.8rem;
   color: var(--white);
 }
 
@@ -27,7 +27,7 @@
 {
   .bgi 
   {
-    /* font-size: 1rem; */
+    font-size: 1rem; 
     padding: 5% 7%;
   }
 
@@ -38,6 +38,6 @@
 
   .cgreen 
   {
-    /* font-size: 1.8rem; */
+    font-size: 1.8rem; 
   }
 }
