--- a/src/Components/Main/Box/Card.css
+++ b/src/Components/Main/Box/Card.css
@@ -46,10 +46,10 @@
     background-color: rgb(255, 255, 255);
   }
   .p1 {
-    /*font-size: 75%; */
+    font-size: 75%; 
   }
   .h41 {
-    /* font-size: 110%; */
+    font-size: 110%; 
   }
 }
 @media (max-width: 700px) {
