--- a/src/Components/Main/Explore/Explore.css
+++ b/src/Components/Main/Explore/Explore.css
@@ -101,7 +101,7 @@
         min-width: 350px;
         padding: 0.6rem 0;
         margin: 1.3rem auto;
-        /*font-size: 0.87rem;*/
+        font-size: 0.87rem;
     }
 
     .block_links 
@@ -117,6 +117,6 @@
 
     .explr 
     {
-        /*font-size: 1.1rem;*/
+        font-size: 1.1rem;
     }
 }
