--- a/src/Components/People/Profile/Profile.css
+++ b/src/Components/People/Profile/Profile.css
@@ -2,6 +2,7 @@
 {
     cursor: pointer;
 }
+
 .section_profile
 {
     position: absolute;
@@ -42,6 +43,7 @@ ol > li
     color: var(--white);
     font-family: "Roboto", sans-serif;
     line-height: 1.6;
+    position: relative;
 }
 
 .profile_head h2
@@ -142,16 +144,23 @@ ol > li
     left: 0%;
     transform: translateX(-25%);
     background-color: white;
-    color: var(--bg-main);
     text-align: center;
-    border-radius: 12px;
+    border-radius: 12px; 
+    box-shadow: 2px 3px 5px rgb(0, 0, 0, 0.5);
+    overflow: hidden;
 }
 
 .drop-menu ul li
 {
     display: block;
-    width: 100%;
-    padding: 2px 0;
+    padding: 5px 0;
+    color: var(--bg-main); 
+}
+
+.drop-menu ul li:hover
+{
+    color: white;
+    background-color: rgb(3, 18, 58);
 }
 
 .profile_text
@@ -227,4 +236,31 @@ div[class^='child_sec-']
     display: list-item;
     list-style-type: circle;
     position: absolute;
+}
+
+.btn-prof
+{
+    display: block;
+    padding: 16px 32px;
+    font-size: 1rem;
+    background-color: transparent;
+    cursor: pointer;
+    position: absolute;
+    bottom: 4%;
+    right: 2%;
+    color: white;
+    border: 2px solid white;
+    border-radius: 30px;
+    transition: all 0.5s;
+}
+
+.btn-prof:hover
+{
+    background-color: white;
+    color: var(--bg-main);
+}
+
+.btn-prof:active
+{
+    transform: scale(0.96);
 }
