--- a/src/Components/Reusable/Footer/Footer.css
+++ b/src/Components/Reusable/Footer/Footer.css
@@ -61,7 +61,7 @@
         font-family: "Roboto Slab", sans-serif;
         color: rgb(196, 196, 196);
         font-weight: 400;
-        /*font-size: 85%;*/
+        font-size: 85%;
         margin-right: 5%;
         text-decoration: none;
     }
@@ -71,7 +71,7 @@
         font-family: "Roboto Slab", sans-serif;
         color: rgb(255, 255, 255);
         padding-bottom: 30px;
-        /*font-size: 80%;*/
+        font-size: 80%;
         text-align: center;
     }
 }
@@ -138,7 +138,7 @@
     font-family: "Roboto Slab", sans-serif;
     color: rgb(196, 196, 196);
     font-weight: 400;
-    /*font-size: 85%;*/
+    font-size: 85%;
     margin-left: 30px;
     margin-right: 30px;
     margin-top: 20px;
@@ -148,7 +148,7 @@
     font-family: "Roboto Slab", sans-serif;
     color: rgb(255, 255, 255);
     margin-top: 4%;
-    /*font-size: 1.2rem;*/
+    font-size: 1.2rem;
     padding-bottom: 30px;
     text-align: center;
   }
@@ -207,7 +207,7 @@
     font-family: "Roboto Slab", sans-serif;
     color: rgb(238, 238, 238);
     font-weight: 400;
-    /*font-size: 1.5rem; */
+    font-size: 1.5rem; 
     margin-left: 30px;
     margin-right: 30px;
     margin-top: 20px;
@@ -219,7 +219,7 @@
     font-family: "Roboto Slab", sans-serif;
     color: rgb(255, 255, 255);
     margin-top: 4%;
-    /*font-size: 1.5rem;*/
+    font-size: 1.5rem;
     padding-bottom: 30px;
     text-align: center;
   }
