--- a/src/Components/People/Faculty/Faculty.css
+++ b/src/Components/People/Faculty/Faculty.css
@@ -7,39 +7,6 @@
     line-height: 1.4;
 }
 
-.faculty_bg
-{
-    width: 100%;
-    height: 30rem;
-    background-image: linear-gradient(to right, rgba(3,29,58, 0.3) 0%, rgba(3,29,58, 0.5) 100%),
-    url("../../../Assets/main/img_about.jpg");
-    background-size: cover;
-    position: relative;
-}
-
-.faculty_bg > h1
-{
-    font-size: 6rem;
-    font-weight: 900;
-    color: var(--white);
-    font-family: "Roberto", sans-serif;
-    position: absolute;
-    top: 50%;
-    left: 10%;
-    text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.123);  
-}
-
-.faculty_bg > h1::before
-{
-    content: "";
-    width: 80%;
-    height: 0.3rem;
-    position: absolute;
-    bottom: 0%;
-    left: 0%;
-    background-color: var(--white);
-}
-
 .section_faculty h1
 {
     text-align: center;
@@ -60,6 +27,7 @@
 .faculty_grid h3
 {
     margin-bottom: 0.2rem;
+    font-size: 1.3rem;
 }
 
 .faculty_grid h3,
@@ -199,6 +167,7 @@
 
 @media screen and (max-width: 980px)
 {
+
     .faculty_grid
     {
         width: 60%;
@@ -213,6 +182,11 @@
         grid-template-columns: 118px 1fr;
     }
 
+    .faculty_grid h3
+    {
+        font-size: 1.3rem;
+    }
+
     .faculty_grid p
     {
         font-size: 0.95rem;
@@ -222,5 +196,26 @@
     {
         width: 103.95px;
         height: 126px;
+    }
+}
+
+@media screen and (max-width: 600px)
+{
+    #hide-para
+    {
+        display: none;
+    }
+
+    .faculty_grid
+    {
+        width: 80%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(11, 10rem);
+        grid-column-gap: 40px;
+    }
+
+    .faculty_grid p
+    {
+        font-size: 1rem;
     }
 }
