--- a/src/Components/People/Profile/Template.css
+++ b/src/Components/People/Profile/Template.css
@@ -1,8 +1,47 @@
+/* to change cursor */
 #pointer
 {
     cursor: pointer;
 }
 
+
+
+/* dropdown menu */
+.drop-menu
+{
+    content: "";
+    min-width: 180px;
+    display: none;
+    position: absolute;
+    top: 90%;
+    left: 0%;
+    transform: translateX(-25%);
+    background-color: white;
+    text-align: center;
+    border-radius: 12px; 
+    box-shadow: 2px 3px 5px rgb(0, 0, 0, 0.5);
+    overflow: hidden;
+}
+
+.drop-menu ul li
+{
+    display: block;
+    padding: 5px 0;
+    color: var(--bg-main); 
+}
+
+.drop-menu ul li:hover
+{
+    color: white;
+    background-color: rgb(3, 18, 58);
+}
+
+.drop-menu:hover
+{
+    display: block;
+}
+
+/* Main */
 .section_profile
 {
     position: absolute;
@@ -13,6 +52,25 @@
     z-index: 11;
 }
 
+/* head */
+.profile_head
+{
+    background-color: var(--bg-main);
+    padding: 0 6rem;
+    width: inherit;
+    height: 30rem;
+    color: var(--white);
+    font-family: "Roboto", sans-serif;
+    line-height: 1.4;
+    position: relative;
+}
+
+.head_text h2
+{
+    font-size: 3.5rem;
+}
+
+/* Body */
 ol
 {
     padding-left: 1.5rem;
@@ -34,33 +92,6 @@ ol > li
     list-style: circle;
 }
 
-.profile_head
-{
-    background-color: var(--bg-main);
-    padding: 0 6rem;
-    width: inherit;
-    height: 30rem;
-    color: var(--white);
-    font-family: "Roboto", sans-serif;
-    line-height: 1.4;
-    position: relative;
-}
-
-.profile_head h2
-{
-    font-size: 3.5rem;
-}
-
-.profile_head h5
-{
-    font-size: 2rem;
-}
-
-.profile_head h6
-{
-    font-size: 1.4rem;
-}
-
 .profile_nav
 {
     display: flex;
@@ -73,7 +104,6 @@ ol > li
 .profile_nav p
 {
     color: var(--white);
-   
 }
 
 .head_div
@@ -138,40 +168,6 @@ ol > li
 .research-link:hover .drop-menu
 {
     display: block;
-}
-
-.drop-menu:hover
-{
-    display: block;
-}
-
-.drop-menu
-{
-    content: "";
-    min-width: 180px;
-    display: none;
-    position: absolute;
-    top: 90%;
-    left: 0%;
-    transform: translateX(-25%);
-    background-color: white;
-    text-align: center;
-    border-radius: 12px; 
-    box-shadow: 2px 3px 5px rgb(0, 0, 0, 0.5);
-    overflow: hidden;
-}
-
-.drop-menu ul li
-{
-    display: block;
-    padding: 5px 0;
-    color: var(--bg-main); 
-}
-
-.drop-menu ul li:hover
-{
-    color: white;
-    background-color: rgb(3, 18, 58);
 }
 
 .profile_text
@@ -275,3 +271,225 @@ div[class^='child_sec-']
 {
     transform: scale(0.96);
 }
+
+@media screen and (max-width: 1260px)
+{
+    .profile_head
+    {
+        padding: 0 3.6rem;
+    }
+
+    .head_text 
+    {
+        line-height: 1.4;
+    }
+
+    .profile_head h2
+    {
+        font-size: 3.2rem;
+    }
+    
+    .head_text h5
+    {
+        font-size: 1.7rem;
+    }
+    
+    .head_text p
+    {
+        font-size: 1.1rem;
+    }
+}
+
+@media screen and (max-width: 1090px)
+{
+    .profile_head
+    {
+        padding: 0 2.8rem;
+    }
+
+    .head_text 
+    {
+        line-height: 1.35;
+    }
+
+    .profile_head h2
+    {
+        font-size: 3rem;
+    }
+    
+    .head_text h5
+    {
+        font-size: 1.5rem;
+    }
+    
+    .head_text p
+    {
+        font-size: 1rem;
+    }
+
+    .photo_container
+    {
+        width: 36%;
+        height: 28rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .profile_photo
+    {
+        width: 238px;
+        height: 256px;
+        outline: 2px solid white;
+        outline-offset: 1rem;
+    }
+}
+
+@media screen and (max-width: 980px)
+{
+
+    .head_div
+    {
+        padding: 3.57rem;
+    }
+
+    .profile_nav
+    {
+        display: none;
+    }
+
+    .profile_head
+    {
+        padding: 0 1.8rem;
+    }
+
+    .head_text 
+    {
+        line-height: 1.3;
+    }
+
+    .profile_head h2
+    {
+        font-size: 2.7rem;
+    }
+    
+    .head_text h5
+    {
+        font-size: 1.4rem;
+    }
+    
+    .head_text p
+    {
+        font-size: 0.98rem;
+    }
+
+    .photo_container
+    {
+        width: 36%;
+        height: 28rem;
+    }
+    
+    .profile_photo
+    {
+        width: 205px;
+        height: 230px;
+    }
+
+    .ham_box > div
+    {
+        position: absolute;
+        top: 2%;
+        right: 4%;
+        width: 3.52rem;
+        height: 3.1rem;
+    }
+}
+
+@media screen and (max-width: 860px)
+{
+    .profile_head
+    {
+        padding: 0 1rem;
+        padding-left: 0.5rem;
+    }
+
+    .profile_head h2
+    {
+        font-size: 2.5rem;
+        
+    }
+    
+    .head_text h5
+    {
+        font-size: 1.4rem;
+    }
+    
+    .head_text p
+    {
+        font-size: 0.98rem;
+    }
+
+    .photo_container
+    {
+        width: 36%;
+        height: 28rem;
+    }
+    
+    .profile_photo
+    {
+        width: 205px;
+        height: 230px;
+    }
+}
+
+@media screen and (max-width: 770px)
+{
+    .head_div
+    {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .photo_container
+    {
+        height: 100%;
+    }
+
+    .profile_head
+    {
+        padding: 0 1rem;
+        padding-left: 0;
+    }
+
+    .profile_head h2
+    {
+        font-size: 2.4rem;
+        
+    }
+    
+    .head_text h5
+    {
+        font-size: 1.4rem;
+    }
+    
+    .head_text p
+    {
+        font-size: 0.98rem;
+    }
+
+    .profile_head
+    {
+        padding: 0;
+    }
+
+}
+
+@media screen and (max-width: 520px)
+{
+    .ham_box > div
+    {
+        width: 2.9rem;
+        height: 2.6rem;
+    }
+}
+
